--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,6 @@
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info
+           ,{platform_define, "^2[1-9]", post20}
+           ]}.
 
 {xref_checks, [undefined_function_calls,locals_not_used]}.
 
