rebar.config: normalize whitespace

--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,9 @@
-{erl_opts, [debug_info
-           ,{platform_define, "^2[1-9]", post20}
-           ]}.
+{erl_opts, [
+  debug_info,
+  {platform_define, "^2[1-9]", post20}
+]}.
 
-{xref_checks, [undefined_function_calls,locals_not_used]}.
+{xref_checks, [undefined_function_calls, locals_not_used]}.
 
 {dialyzer, [{base_plt_apps, [elli]}]}.
 
@@ -25,7 +26,7 @@
   {application, elli_websocket},
   {subpackages, false},
   {doclet, edown_doclet},
-  {todo,   true},
+  {todo, true},
   {doc_path, [
     "http://raw.github.com/elli-lib/elli/develop/doc"
   ]},
